# climate-change

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  registry.py
.github/workflows/: python-package.yml
ai_interpreter/: __init__.py  interpreter.py
climate_change.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
core/: __init__.py  base_use_case.py  cache.py  dask_engine.py  gee_auth.py  runner.py
disease/: __init__.py  cog_export.py  features.py  model.py  use_case.py
drought/: __init__.py  cdi_runner.py  features.py  model.py  use_case.py
example-usage/: 01_drought_analysis.ipynb  02_flood_risk_analysis.ipynb  03_food_security_analysis.ipynb  04_disease_risk_analysis.ipynb  05_land_degradation_analysis.ipynb
experiments/: 01_drought_monitoring_lab.ipynb  02_food_security_lab.ipynb  03_flood_monitoring_lab.ipynb  04_disease_surveillance_lab.ipynb  05_land_degradation_lab.ipynb
flood/: __init__.py  cog_export.py  features.py  model.py  use_case.py
food_security/: __init__.py  cog_export.py  features.py  model.py  use_case.py
land_degradation/: __init__.py  cog_export.py  features.py  model.py  use_case.py
reporting/: __init__.py  report_builder.py
tests/: conftest.py  test_ai_interpreter.py  test_core_base_use_case.py  test_core_cache.py  test_core_dask_engine.py  test_core_gee_auth.py  test_core_runner.py  test_disease_features.py  test_disease_model.py  test_drought_cdi_runner.py  test_drought_features.py  test_drought_model.py  test_drought_xee_compat.py  test_flood_features.py  test_flood_model.py  test_food_security_features.py  test_food_security_model.py  test_land_degradation_model.py  test_registry.py  test_reporting.py
