[project]
name = "climate-change"
version = "1.0.0"
description = "Climate Resilience and Adaptation Decision Support System — multi-hazard EO analysis (drought, flood, food security, disease, land degradation)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
authors = [
    { name = "George Odero" },
]
keywords = [
    "climate-change",
    "drought",
    "flood",
    "food-security",
    "disease-surveillance",
    "land-degradation",
    "google-earth-engine",
    "remote-sensing",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "bottleneck>=1.6.0",
    "dask[distributed]>=2024.8.0",
    "drought-monitoring>=0.1.8",
    "earthengine-api>=0.1.370",
    "joblib>=1.3",
    "lightgbm>=4.0",
    "matplotlib>=3.5",
    "numpy>=1.24",
    "openai>=1.0",
    "pandas>=2.0",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
    "rasterio>=1.3",
    "reportlab>=4.0",
    "requests>=2.31",
    "rioxarray>=0.15",
    "ruptures>=1.1",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "shap>=0.49.1",
    "torch>=2.1",
    "xarray>=2023.1",
    "xee>=0.0.22",
    "xgboost>=2.0",
]

[project.urls]
Homepage = "https://github.com/Odero54/climate-change"
"Source Code" = "https://github.com/Odero54/climate-change"
"Documentation" = "https://github.com/Odero54/climate-change#readme"
"Bug Tracker" = "https://github.com/Odero54/climate-change/issues"

[project.optional-dependencies]
gee    = ["earthengine-api>=0.1.370", "xee>=0.0.22"]
cog    = ["rasterio>=1.3", "rioxarray>=0.15"]
ml     = ["scikit-learn>=1.3", "xgboost>=2.0", "lightgbm>=4.0", "shap>=0.44", "torch>=2.1", "numba>=0.58", "llvmlite>=0.41"]
ai     = ["openai>=1.0"]
report = ["reportlab>=4.0", "Pillow>=10.0"]
dev    = [
    "pytest>=7",
    "pytest-cov",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "jupyterlab",
    "matplotlib>=3.5",
    "rasterio>=1.3",
    "rioxarray>=0.15",
]
all    = [
    "earthengine-api>=0.1.370",
    "xee>=0.0.22",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.44",
    "torch>=2.1",
    "openai>=1.0",
    "reportlab>=4.0",
    "Pillow>=10.0",
]

# The repo root IS the climate_change package (no climate_change/ subdirectory)
[tool.setuptools]
packages = [
    "climate_change",
    "climate_change.ai_interpreter",
    "climate_change.core",
    "climate_change.disease",
    "climate_change.drought",
    "climate_change.flood",
    "climate_change.food_security",
    "climate_change.land_degradation",
    "climate_change.reporting",
]

[tool.setuptools.package-dir]
"climate_change" = "."

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".venv", "__pycache__", "dist", "*.egg-info", "*.ipynb", "experiments"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E402",   # module-level import not at top — logger before imports is intentional
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function call in default args
    "B905",   # zip() without strict= — iterables are always paired here
    "SIM108", # ternary operator — not always clearer
]

[tool.ruff.lint.isort]
known-first-party = ["climate_change"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
files = ["."]
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = false
explicit_package_bases = true
exclude = ["experiments/", "\\.venv/", "tests/"]
